--- a/subversion/repos/extra-x86_64/PKGBUILD
+++ b/subversion/repos/extra-x86_64/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Jason Chu <jason@archlinux.org>
 
 pkgname=subversion
-pkgver=1.12.2
+pkgver=1.13.0
 pkgrel=1
 pkgdesc="A Modern Concurrent Version Control System"
 arch=('x86_64')
@@ -22,14 +22,14 @@ optdepends=('libgnome-keyring: for GNOME Keyring for auth credentials'
             'ruby: for some hook scripts')
 checkdepends=('ruby-test-unit')
 provides=('svn')
-backup=('etc/xinetd.d/svn')
+backup=('etc/xinetd.d/svn' 'etc/conf.d/svnserve')
 options=('!makeflags' '!emptydirs')
 source=(https://www.apache.org/dist/subversion/subversion-${pkgver}.tar.bz2{,.asc}
         svn
         svnserve.tmpfiles
         subversion.rpath.fix.patch
         ruby-frozen-nil.patch)
-sha512sums=('b1f859b460afa54598778d8633f648acb4fa46138f7d6f0c1451e3c6a1de71df859233cd9ac7f19f0f20d7237ed3988f0a38da7552ffa58391e19d957bc7c136'
+sha512sums=('36f390b412bf772bf894efc2aadc247f12ca30ac407e04f664c14411c3519e1bb242d1239f2f44cbcb86eafc7c413efc8eadbfe1d1e75118235a7b7adc6c85b2'
             'SKIP'
             '3df59e92aa0314ff6adce26e2e1162bf2872ca03ff1f78891081a60e67b521b6046b4a2f85f718dcd27f9d5709594658817a09548cdb74e3976d371dbe47e7db'
             '7775f4da5003970c9ebdc2f696ba090df194a77d9daed791875488c943f72ae496b5f9cc6f3ff9f3f4de9f352a3b518137babdea38947d1a2d5dd16aa1844036'
@@ -42,8 +42,10 @@ validpgpkeys=('19BBCAEF7B19B280A0E2175E62D48FAD16A0DE01'
               '3D1DC66D6D2E0B9039528138C4A6C625CCC8E1DF'
               'A844790FB5743606EE95920776D788E1ED1A599C'
               '7B8CA7F6451AD89C8ADC077B376A3CFD110B1C95'
-              '056F8016D9B87B1BDE41746799EC741B57921ACC')
-# Ben Reser / Stefan Sperling / Branko Čibej / Evgeny Kotkov / Bert Huijben / Philip Martin / Stefan Fuhrmann / Stefan Hett (CODE SIGNING KEY)
+              '056F8016D9B87B1BDE41746799EC741B57921ACC'
+              '3F8E467CB3366E3013E1120D583F00ADF981C39F')
+# Ben Reser / Stefan Sperling / Branko Čibej / Evgeny Kotkov / Bert Huijben / Philip Martin /
+# Stefan Fuhrmann / Stefan Hett (CODE SIGNING KEY) /Nathan Hartman (CODE SIGNING KEY)
 
 prepare() {
    cd ${pkgname}-${pkgver}
@@ -90,8 +92,6 @@ package() {
    install -dm755 "${pkgdir}"/usr/share/subversion
    cp -a tools/hook-scripts "${pkgdir}"/usr/share/subversion/
    rm "${pkgdir}"/usr/share/subversion/hook-scripts/*.in
-
-   ## svnserve ...
 
    # xinetd
    install -D -m 644 "${srcdir}"/svn "${pkgdir}"/etc/xinetd.d/svn
