--- a/cmake/repos/extra-x86_64/PKGBUILD
+++ b/cmake/repos/extra-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=cmake
-pkgver=3.15.5
+pkgver=3.16.0
 pkgrel=1
 pkgdesc='A cross-platform open-source make system'
 arch=('x86_64')
@@ -12,14 +12,12 @@ license=('custom')
 depends=('curl' 'libarchive' 'shared-mime-info' 'jsoncpp' 'libjsoncpp.so' 'libuv' 'rhash')
 makedepends=('qt5-base' 'python-sphinx' 'emacs')
 optdepends=('qt5-base: cmake-gui')
-source=("https://www.cmake.org/files/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz"
-        cmake-default-libdir.patch)
-sha512sums=('c71a50fe864772dbef16ef472c1ead88e8e322c8451bc395c454af9baa7c7eb6e1bd9abdca0745f979fbacf97f1e1ceaa84c0fcc412cf1e3bcd835aff32199b6'
-            'aa45c3278e27c2179bcaabc1b643103b498545b0d3fedfb955c942647cb3363acb3a2f8b3e32b0e819f2b6a976f70ba1cb7d8d222a4b7eeaa331fb0eee16fa33')
+source=("https://www.cmake.org/files/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('edbe16745cb82dc85f387ccdff37f3a89aa670a0e3b7dae53c3762c1cc44be1fa647156000a4ddcaac66822e3e537434ce2918da72a1ad208fa5378947ecec0d')
 
 prepare() {
   cd ${pkgname}-${pkgver}
-  patch -p1 -i ../cmake-default-libdir.patch # Set lib as default LIBDIR
+  sed -e 's|/etc/arch-release|/etc/artix-release|' -i Modules/GNUInstallDirs.cmake
 }
 
 build() {
