--- a/brltty/repos/extra-x86_64/PKGBUILD
+++ b/brltty/repos/extra-x86_64/PKGBUILD
@@ -3,17 +3,16 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
-
 pkgname=brltty
 pkgver=6.0
-pkgrel=7
+pkgrel=8
 pkgdesc="Braille display driver for Linux/Unix"
 arch=('x86_64')
 url="https://brltty.app"
 license=('LGPL2.1')
 depends=('gpm' 'icu' 'liblouis' 'tcl')
 makedepends=('at-spi2-core' 'bluez-libs' 'cython' 'espeak' 'java-environment'
-'libxaw' 'ocaml-ctypes' 'ocaml-findlib' 'polkit' 'speech-dispatcher' 'ocaml')
+'libxaw' 'ocaml-ctypes' 'ocaml-findlib' 'polkit' 'speech-dispatcher' 'elogind')
 optdepends=('at-spi2-core: X11/GNOME Apps accessibility'
             'atk: ATK bridge for X11/GNOME accessibility'
             'bluez-libs: bluetooth support'
@@ -34,7 +33,6 @@ sha512sums=('b114cb55916109ddeb472df1e5d206c27e93cab64c4b51f82cf0887f63f6fa90064
             'a530fe66983768f9dc544af01c586abc101dfa2ed76885b4f1fd78c483b59e8445f2c0dbbfb865dd1cf2874342c346bd35ce978ab246e9cdd31d2d489a14e770'
             'cc2e2d5f33d4e11d6ff828aefc0773ccdc02127ce2f00649c1e3f8d4b39b90789f4a0e41385b344f850c38bd4a1df36d3d9d413a59144d431defdd343633f800')
 
-
 build() {
   cd "${pkgname}-${pkgver}"
   ./configure --prefix=/usr \
@@ -44,7 +42,7 @@ build() {
               --with-tables-directory=/usr/share/brltty \
               --with-screen-driver=lx \
               --enable-gpm
-  MAKEFLAGS="-j1" make
+  make -j1
 }
 
 package() {
