--- a/git/repos/extra-x86_64/PKGBUILD
+++ b/git/repos/extra-x86_64/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=git
-pkgver=2.24.0
-pkgrel=1
+pkgver=2.24.1
+pkgrel=2
 pkgdesc='the fast distributed version control system'
 arch=(x86_64)
 url='https://git-scm.com/'
@@ -23,13 +23,13 @@ optdepends=('tk: gitk and git gui'
             'perl-cgi: gitweb (web interface) support'
             'python2: various helper scripts'
             'subversion: git svn'
-            'gnome-keyring: GNOME keyring credential helper'
+            'org.freedesktop.secrets: keyring credential helper'
             'libsecret: libsecret credential helper')
 install=git.install
 validpgpkeys=('96E07AF25771955980DAD10020D04E5A713660A7') # Junio C Hamano
 source=("https://www.kernel.org/pub/software/scm/git/git-$pkgver.tar."{xz,sign}
         'git-sysusers.conf')
-sha256sums=('9f71d61973626d8b28c4cdf8e2484b4bf13870ed643fed982d68b2cfd754371b'
+sha256sums=('723f24dce8fdd621a308b6187553fce7d5244205c065fe0a3aebd0b7c3f88562'
             'SKIP'
             '7630e8245526ad80f703fac9900a1328588c503ce32b37b9f8811674fcda4a45')
 
