[trunk] -> [extra] 'sip5-5.0.0-4' add

--- a/sip5/repos/extra-x86_64/PKGBUILD
+++ b/sip5/repos/extra-x86_64/PKGBUILD
@@ -2,14 +2,21 @@
 
 pkgname=sip5
 pkgver=5.0.0
-pkgrel=1
+pkgrel=4
 arch=(x86_64)
 pkgdesc="A tool that makes it easy to create Python bindings for C and C++ libraries"
 url='https://www.riverbankcomputing.com/software/sip/intro'
 license=('custom:"sip"')
 depends=(python-setuptools python-toml)
-source=("https://files.pythonhosted.org/packages/c6/7f/b0830b133e6fac3902ecea99acc99e41972d9b565cda5d68ae33ae37909c/sip-$pkgver.tar.gz")
-sha256sums=('c034d427f52584d63277dd7df4d16d00c5df0b5cb838e0c256865b854b7e074b')
+source=("https://www.riverbankcomputing.com/static/Downloads/sip/$pkgver/sip-$pkgver.tar.gz"
+         sip5-destdir.patch)
+sha256sums=('c034d427f52584d63277dd7df4d16d00c5df0b5cb838e0c256865b854b7e074b'
+            '7d059d7826d1d8b96b939ddbd0f0eac9273823e9285a78b11d0de4079a25d389')
+
+prepare() {
+  cd sip-$pkgver
+  patch -p1 -i ../sip5-destdir.patch # Honor DESTDIR in make install https://www.riverbankcomputing.com/pipermail/pyqt/2019-December/042390.html
+}
 
 build() {
   cd sip-$pkgver
