[testing] -> [core] 'groff-1.22.4-3' move

--- a/groff/repos/core-x86_64/PKGBUILD
+++ b/groff/repos/core-x86_64/PKGBUILD
@@ -2,17 +2,18 @@
 
 pkgname=groff
 pkgver=1.22.4
-pkgrel=2
+pkgrel=3
 pkgdesc='GNU troff text-formatting system'
 arch=('x86_64')
 url='https://www.gnu.org/software/groff/groff.html'
 license=('GPL')
 groups=('base-devel')
 depends=('perl' 'gcc-libs')
-makedepends=('netpbm' 'psutils'  'libxaw')
+makedepends=('netpbm' 'psutils'  'libxaw' 'perl-file-homedir')
 optdepends=('netpbm: for use together with man -H command interaction in browsers'
             'psutils: for use together with man -H command interaction in browsers'
-            'libxaw: for gxditview')
+            'libxaw: for gxditview'
+            'perl-file-homedir: for use with glilypond')
 options=('!docs' '!emptydirs' '!makeflags')
 validpgpkeys=('2D0C08D2B0AD0D3D8626670272D23FBAC99D4E75') # Bertrand Garrigues <bertrand.garrigues@laposte.net>
 source=("https://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.gz"{,.sig}
