[testing] -> [extra] 'apr-util-1.6.1-6' move

--- a/apr-util/repos/extra-x86_64/PKGBUILD
+++ b/apr-util/repos/extra-x86_64/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=apr-util
 pkgver=1.6.1
-pkgrel=5
+pkgrel=6
 pkgdesc="The Apache Portable Runtime"
 arch=('x86_64')
-url="http://apr.apache.org/"
+url="https://apr.apache.org/"
 depends=('apr' 'expat')
-makedepends=('gdbm' 'libldap' 'unixodbc' 'openssl' 'nss' 'sqlite' 'mariadb-libs' 'db' 'postgresql-libs' 'python2')
+makedepends=('gdbm' 'libldap' 'unixodbc' 'openssl' 'nss' 'sqlite' 'mariadb-libs' 'db' 'postgresql-libs' 'python')
 optdepends=(
   'gdbm: enable gdbm support'
   'libldap: enable ldap support'
