--- a/apr/repos/extra-x86_64/PKGBUILD
+++ b/apr/repos/extra-x86_64/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=apr
 pkgver=1.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc='The Apache Portable Runtime'
 arch=('x86_64')
-url='http://apr.apache.org/'
+url='https://apr.apache.org/'
 depends=('util-linux')
-makedepends=('python2')
+makedepends=('python')
 license=('APACHE')
-source=(http://www-us.apache.org/dist/apr/apr-$pkgver.tar.bz2{,.asc}
+source=(https://www-us.apache.org/dist/apr/apr-$pkgver.tar.bz2{,.asc}
         fix_apr-config.patch
         ship_find_apr.m4.patch
         fix-apr.pc.patch
@@ -34,8 +34,6 @@ prepare() {
   patch -Np1 -i ../fix-apr.pc.patch
   patch -Np1 -i ../omit_extra_libs.patch
   patch -Np1 -i ../dont_override_external_buildflags
-  sed -e 's/env python/env python2/' -i build/gen-build.py
-  sed -e 's/python/python2/g' -i build/buildcheck.sh
   ./buildconf
 }
 
