--- a/rubygems/trunk/PKGBUILD
+++ b/rubygems/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=rubygems
 pkgdesc='Package management framework for Ruby'
 pkgver=3.1.2
-pkgrel=3
+pkgrel=4
 arch=(any)
 url='https://rubygems.org/'
 license=(MIT)
@@ -12,18 +12,21 @@ makedepends=(ruby)
 backup=(etc/gemrc)
 checkdepends=(rake)
 source=(rubygems-$pkgver.zip::https://github.com/rubygems/rubygems/archive/v${pkgver}.zip
+        stop_so_duplication.patch
 	gemrc)
 sha512sums=('53b9d18ba5240d1f382f8128f2416870335789ceed39f4ddb1dc4a951c8beb1dd5198cde19a0ddccb9b6cd55b2614e96dfbe99dcc5f1c64ae106cf614f762076'
+            '9919490bbf7dba979a1df7543e62eb3fca48e8a516e6b6ab0a73080952e1b58599b7f233259d122dc66bf93f032b434d70e0dd448a1cb86513f01acb51b2120e'
             '8cafd14d414ee3c16aa94f79072bc6c100262f925dc1300e785846c3fabbbbffc1356b8e2223af5684e3340c55032d41231179ffa948bb12e01dbae0f4131911')
 
 prepare() {
   cd rubygems-${pkgver}
+  patch -p1 < ../stop_so_duplication.patch
 }
 
 check() {
   cd rubygems-${pkgver}
 
-  # disable as it requires a bund of ruby dependencies
+  # disable as it requires a lot of ruby-* dependencies
   #rake test
 }
 
