--- a/git/trunk/PKGBUILD
+++ b/git/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=git
 pkgver=2.24.1
-pkgrel=3
+pkgrel=4
 pkgdesc='the fast distributed version control system'
 arch=(x86_64)
 url='https://git-scm.com/'
@@ -28,9 +28,11 @@ optdepends=('tk: gitk and git gui'
 install=git.install
 validpgpkeys=('96E07AF25771955980DAD10020D04E5A713660A7') # Junio C Hamano
 source=("https://www.kernel.org/pub/software/scm/git/git-$pkgver.tar."{xz,sign}
+        '0001-git-p4-python.patch'
         'git-sysusers.conf')
 sha256sums=('723f24dce8fdd621a308b6187553fce7d5244205c065fe0a3aebd0b7c3f88562'
             'SKIP'
+            '256f9c674e3617ae4373cb89b6ab972bb0279331c39425b94becadccb3b1a63a'
             '7630e8245526ad80f703fac9900a1328588c503ce32b37b9f8811674fcda4a45')
 
 _make_paths=(
@@ -47,6 +49,12 @@ _make_options=(
   NO_PERL_CPAN_FALLBACKS=1
   USE_LIBPCRE2=1
 )
+
+prepare() {
+  cd "$srcdir/$pkgname-$pkgver"
+
+  patch -Np1 < ../0001-git-p4-python.patch
+}
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
