[trunk] -> [extra] 'libva-2.6.0-1' add

--- a/libva/repos/extra-x86_64/PKGBUILD
+++ b/libva/repos/extra-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=libva
-pkgver=2.5.0
+pkgver=2.6.0
 pkgrel=1
 pkgdesc='Video Acceleration (VA) API for Linux'
 arch=(x86_64)
@@ -35,8 +35,14 @@ provides=(
   libva.so
 )
 backup=(etc/libva.conf)
-source=(git+https://github.com/intel/libva.git#tag=${pkgver})
-sha256sums=('SKIP')
+source=(git+https://github.com/intel/libva.git#tag=5f693d9e603e0e83928cec67c30b6ac902d7aa85)
+sha256sums=(SKIP)
+
+pkgver() {
+  cd libva
+
+  git describe --tags
+}
 
 build() {
   CFLAGS+=" -DENABLE_VA_MESSAGING"  # Option missing
