--- a/clang/trunk/PKGBUILD
+++ b/clang/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
 pkgname=clang
-pkgver=9.0.0
-pkgrel=3
+pkgver=9.0.1
+pkgrel=1
 pkgdesc="C language family frontend for LLVM"
 arch=('x86_64')
 url="https://clang.llvm.org/"
@@ -16,42 +16,38 @@ optdepends=('openmp: OpenMP support in clang with -fopenmp'
 provides=("clang-analyzer=$pkgver" "clang-tools-extra=$pkgver")
 conflicts=('clang-analyzer' 'clang-tools-extra')
 replaces=('clang-analyzer' 'clang-tools-extra')
-source=(https://releases.llvm.org/$pkgver/cfe-$pkgver.src.tar.xz{,.sig}
-        https://releases.llvm.org/$pkgver/clang-tools-extra-$pkgver.src.tar.xz{,.sig}
-        https://releases.llvm.org/$pkgver/llvm-$pkgver.src.tar.xz{,.sig}
-        0001-Initialize-all-fields-in-ABIArgInfo.patch
-        0001-Fix-Driver-modules.cpp-test-to-work-when-build-direc.patch
+
+_source_base=https://releases.llvm.org/$pkgver
+if [[ ${pkgver##*.} != 0 ]]; then
+  _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
+fi
+
+source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
+        $_source_base/clang-tools-extra-$pkgver.src.tar.xz{,.sig}
+        $_source_base/llvm-$pkgver.src.tar.xz{,.sig}
         enable-SSP-and-PIE-by-default.patch)
-sha256sums=('7ba81eef7c22ca5da688fdf9d88c20934d2d6b40bfe150ffd338900890aa4610'
+sha256sums=('5778512b2e065c204010f88777d44b95250671103e434f9dc7363ab2e3804253'
             'SKIP'
-            'ea1c86ce352992d7b6f6649bc622f6a2707b9f8b7153e9f9181a35c76aa3ac10'
+            'b26fd72a78bd7db998a26270ec9ec6a01346651d88fa87b4b323e13049fb6f07'
             'SKIP'
-            'd6a0565cf21f22e9b4353b2eb92622e8365000a9e90a16b09b56f8157eabfe84'
+            '00a1ee1f389f81e9979f3a640a01c431b3021de0d42278f6508391a2f0b81c9a'
             'SKIP'
-            '9245955509841e031f4c8169c2207b3029e8af9e30a39e662ac1bfd9d6186a51'
-            '72a15c9825a1f5c73cc4f04c831bf3a12620db90922af299599f029aab0d27f0'
             'fde58a4902bec3715bc3d0c9250fa4c5f241af90bfd1e46f7128fa1435c03026')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
-  cd "$srcdir/cfe-$pkgver.src"
+  cd "$srcdir/$pkgname-$pkgver.src"
   mkdir build
   mv "$srcdir/clang-tools-extra-$pkgver.src" tools/extra
   patch -Np1 -i ../enable-SSP-and-PIE-by-default.patch
-
-  # https://bugs.llvm.org/show_bug.cgi?id=40547
-  patch -Np1 -i ../0001-Initialize-all-fields-in-ABIArgInfo.patch
-
-  # https://reviews.llvm.org/D66176
-  patch -Np1 -i ../0001-Fix-Driver-modules.cpp-test-to-work-when-build-direc.patch
 
   # Avoid shipping libclang-cpp before removing BUILD_SHARED_LIBS=ON
   sed -i '/add_clang_subdirectory(clang-shlib)/d' tools/CMakeLists.txt
 }
 
 build() {
-  cd "$srcdir/cfe-$pkgver.src/build"
+  cd "$srcdir/$pkgname-$pkgver.src/build"
 
   # Upstream strongly recommends against BUILD_SHARED_LIBS=ON for distro
   # builds but CLANG_LINK_CLANG_DYLIB=ON is not yet supported by clang's
@@ -76,7 +72,7 @@ build() {
 }
 
 check() {
-  cd "$srcdir/cfe-$pkgver.src/build"
+  cd "$srcdir/$pkgname-$pkgver.src/build"
   ninja check-clang{,-tools}
 }
 
@@ -92,7 +88,7 @@ _python3_optimize() {
 }
 
 package() {
-  cd "$srcdir/cfe-$pkgver.src/build"
+  cd "$srcdir/$pkgname-$pkgver.src/build"
 
   DESTDIR="$pkgdir" ninja install
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
