[trunk] -> [extra] 'lld-9.0.1-1' add

--- a/lld/repos/extra-x86_64/PKGBUILD
+++ b/lld/repos/extra-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
 pkgname=lld
-pkgver=9.0.0
+pkgver=9.0.1
 pkgrel=1
 pkgdesc="Linker from the LLVM project"
 arch=('x86_64')
@@ -10,12 +10,18 @@ url="https://lld.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('llvm-libs')
 makedepends=('llvm' 'cmake' 'ninja' 'python-sphinx')
-source=(https://releases.llvm.org/$pkgver/$pkgname-$pkgver.src.tar.xz{,.sig}
-        https://releases.llvm.org/$pkgver/llvm-$pkgver.src.tar.xz{,.sig}
+
+_source_base=https://releases.llvm.org/$pkgver
+if [[ ${pkgver##*.} != 0 ]]; then
+  _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
+fi
+
+source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
+        $_source_base/llvm-$pkgver.src.tar.xz{,.sig}
         sphinx2.patch)
-sha256sums=('31c6748b235d09723fb73fea0c816ed5a3fab0f96b66f8fbc546a0fcc8688f91'
+sha256sums=('86262bad3e2fd784ba8c5e2158d7aa36f12b85f2515e95bc81d65d75bb9b0c82'
             'SKIP'
-            'd6a0565cf21f22e9b4353b2eb92622e8365000a9e90a16b09b56f8157eabfe84'
+            '00a1ee1f389f81e9979f3a640a01c431b3021de0d42278f6508391a2f0b81c9a'
             'SKIP'
             '7f7cca66a16c5a4aca132bfa1d86a7a2ff33612ec47d3422dc91ad4cc1810646')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
