--- a/openmp/repos/extra-x86_64/PKGBUILD
+++ b/openmp/repos/extra-x86_64/PKGBUILD
@@ -1,16 +1,22 @@
 # Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
 
 pkgname=openmp
-pkgver=9.0.0
-pkgrel=2
+pkgver=9.0.1
+pkgrel=1
 pkgdesc="LLVM OpenMP Runtime Library"
 arch=('x86_64')
 url="https://openmp.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('glibc' 'libelf' 'libffi')
 makedepends=('cmake' 'ninja')
-source=(https://releases.llvm.org/$pkgver/$pkgname-$pkgver.src.tar.xz{,.sig})
-sha256sums=('9979eb1133066376cc0be29d1682bc0b0e7fb541075b391061679111ae4d3b5b'
+
+_source_base=https://releases.llvm.org/$pkgver
+if [[ ${pkgver##*.} != 0 ]]; then
+  _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
+fi
+
+source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig})
+sha256sums=('5c94060f846f965698574d9ce22975c0e9f04c9b14088c3af5f03870af75cace'
             'SKIP')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
