[trunk] -> [testing] 's-nail-14.9.16-2' add

--- a/s-nail/repos/testing-x86_64/PKGBUILD
+++ b/s-nail/repos/testing-x86_64/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=s-nail
 pkgver=14.9.16
-pkgrel=1
+pkgrel=2
 pkgdesc='Environment for sending and receiving mail'
 url='https://www.sdaoden.eu/code.html#s-nail'
 license=('custom:BSD')
@@ -25,11 +25,6 @@ conflicts=('mailx' 'mailx-heirloom' 'heirloom-mailx')
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 	export CFLAGS+=" $CPPFLAGS"
-
-	# The -j value ends up stored in the binary;
-	# to make the build reproducible, hardcode it.
-	export MAKEFLAGS='-j4'
-
 	make \
 		VAL_PREFIX=/usr \
 		VAL_SYSCONFDIR=/etc \
@@ -39,7 +34,7 @@ build() {
 		OPT_AUTOCC=0 \
 		config
 
-	make --jobs build
+	make build
 }
 
 check() {
