--- a/openvpn/repos/testing-x86_64/PKGBUILD
+++ b/openvpn/repos/testing-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=openvpn
 pkgver=2.4.8
-pkgrel=2
+pkgrel=3
 pkgdesc='An easy-to-use, robust and highly configurable VPN (Virtual Private Network)'
 arch=('x86_64')
 url='https://openvpn.net/index.php/open-source.html'
@@ -19,7 +19,7 @@ sha256sums=('SKIP')
 prepare() {
   cd "${srcdir}"/${pkgname}
 
-  autoreconf -i
+  autoreconf --force --install
 }
 
 build() {
