[testing] -> [extra] 'vim-8.2.0033-1' move

--- a/vim/repos/extra-x86_64/PKGBUILD
+++ b/vim/repos/extra-x86_64/PKGBUILD
@@ -9,9 +9,9 @@
 
 pkgbase=vim
 pkgname=('vim' 'gvim' 'vim-runtime')
-pkgver=8.1.2268
-_versiondir=81
-pkgrel=2
+pkgver=8.2.0033
+_versiondir=82
+pkgrel=1
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 url='https://www.vim.org'
 arch=('x86_64')
@@ -22,11 +22,11 @@ source=(https://github.com/vim/vim/archive/v${pkgver}/${pkgbase}-${pkgver}.tar.g
         vimrc
         archlinux.vim
         vimdoc.hook)
-sha256sums=('bca27fc5bfda44cc40c383890379789fcb432873d223861c42f2f581556a860e'
+sha256sums=('e90a9c1898a3720f00f222a5423baff10dcaeab798defbaa07e501a74f18eca5'
             'b16e85e457397ab2043a7ee0a3c84307c6b4eac157fd0b721694761f25b3ed5b'
             'cc3d931129854c298eb22e993ec14c2ad86cc1e70a08a64496f5e06559289972'
             '7095cafac21df7aa42749d6864d1c0549fe65771d8edda3102c931c60782b6b9')
-sha512sums=('00ade0a024c3eb39829ed79345fc13ee0b7fc6163fe71968c360ff6c05e3302c2d1b7bce1c5e934f24ff0f9911ea25baa6e75dc2d1548d5fb5f8e97ed6869659'
+sha512sums=('b0d9613f71da34491ea072d0e0be19eb5ac99bb826796d751ec5a42b6fcd3357a4f536ede42dd32aa562890af8e00b60a0c15fc8767e5c869e526480fb3ee437'
             '4b5bed0813f22af9e158ea9aa56a4a9862dd786ba2d201f20159ccf652da6190164aaed0b6b7217d578f7b25c33a8adcc307bfcf3caa8d173a7ff29e2a00fee7'
             'fe091d289d876f45319c898f6021ef86d6a238b540c225a279c46efc5c36fa7d868cd0cee73a111811c4be90df160f85340bb251be3a437727dbe5c699950363'
             '1e06e981691b17662fd0fddac5c00c87c920d1b4a1cbb6191c42d57cc40b00af12710e26b22fcfc0901bb8142b15f6a04aa65cec2d9b3bb9d5a06cb650d3ab9c')
@@ -34,8 +34,8 @@ sha512sums=('00ade0a024c3eb39829ed79345fc13ee0b7fc6163fe71968c360ff6c05e3302c2d1
 prepare() {
   (cd vim-${pkgver}/src
     # define the place for the global (g)vimrc file (set to /etc/vimrc)
-    sed -i 's|^.*\(#define SYS_.*VIMRC_FILE.*"\) .*$|\1|' feature.h
-    sed -i 's|^.*\(#define VIMRC_FILE.*"\) .*$|\1|' feature.h
+    sed -E 's|^.*(#define SYS_.*VIMRC_FILE.*").*$|\1|g' -i feature.h
+    sed -E 's|^.*(#define VIMRC_FILE.*").*$|\1|g' -i feature.h
     autoconf
   )
   cp -a vim-${pkgver} gvim-${pkgver}
