[testing] -> [core] 'grep-3.4-1' move

--- a/grep/repos/core-x86_64/PKGBUILD
+++ b/grep/repos/core-x86_64/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=grep
-pkgver=3.3
-pkgrel=3
+pkgver=3.4
+pkgrel=1
 pkgdesc='A string search utility'
 arch=('x86_64')
 license=('GPL3')
@@ -14,8 +14,8 @@ depends=('glibc' 'pcre')
 makedepends=('texinfo')
 validpgpkeys=('155D3FC500C834486D1EEA677FD9FCCB000BEEEE') # Jim Meyering
 source=("https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.xz"{,.sig})
-md5sums=('05d0718a1b7cc706a4bdf8115363f1ed'
-         'SKIP')
+sha256sums=('58e6751c41a7c25bfc6e9363a41786cff3ba5709cf11d5ad903cf7cce31cc3fb'
+            'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
