[testing] -> [core] 'libevent-2.1.11-5' move

--- a/libevent/repos/core-x86_64/PKGBUILD
+++ b/libevent/repos/core-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libevent
 pkgver=2.1.11
-pkgrel=4
+pkgrel=5
 pkgdesc="An event notification library"
 arch=('x86_64')
 url="https://libevent.org/"
@@ -30,13 +30,13 @@ prepare() {
 
 build() {
   cd ${pkgname}-${pkgver}-stable
-  cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr -S . -B build
+  cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr -DEVENT__LIBRARY_TYPE=SHARED -S . -B build
   cmake --build build
 }
 
 check() {
   cd ${pkgname}-${pkgver}-stable
-#  cmake --build build --target test
+  cmake --build build --target test
 }
 
 package() {
