--- a/help2man/trunk/PKGBUILD
+++ b/help2man/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Paul Mattal <paul@mattal.com>
 
 pkgname=help2man
-pkgver=1.47.11
+pkgver=1.47.12
 pkgrel=1
 pkgdesc="Conversion tool to create man files"
 arch=('x86_64')
@@ -10,8 +10,8 @@ url="https://www.gnu.org/software/help2man/"
 license=('GPL')
 depends=('perl-locale-gettext')
 source=("https://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.xz"{,.sig})
-md5sums=('dd322adcaede5bd5eaed075ff8971bc1'
-         'SKIP')
+sha512sums=('fb71e48e4a7a0f4316148295ea539b667a131149f4467da0f3e283389c9d9f2a5f1e9124ca8d64d6c3250d332a713d4e8de204ca9e7088840e74f316fa5221be'
+            'SKIP')
 validpgpkeys=('87EA44D150D89615E39A3FEEF0DC8E00B28C5995') # Brendan O'Dea <bod@debian.org>
 
 build() {
