[testing] -> [core] 'file-5.38-1' move

--- a/file/repos/core-x86_64/PKGBUILD
+++ b/file/repos/core-x86_64/PKGBUILD
@@ -3,20 +3,19 @@
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=file
-pkgver=5.37
-pkgrel=5
+pkgver=5.38
+pkgrel=1
 pkgdesc='File type identification utility'
 arch=('x86_64')
 license=('custom')
 groups=('base-devel')
 url='https://www.darwinsys.com/file/'
-depends=('glibc' 'zlib')
-source=("ftp://ftp.astron.com/pub/$pkgname/$pkgname-$pkgver.tar.gz"{,.asc}
-  d3132f65594e8ad27b74643786a786cd3e60c715.patch)
+depends=('glibc' 'zlib' 'xz' 'bzip2' 'libseccomp' 'libseccomp.so')
+provides=('libmagic.so')
+source=("ftp://ftp.astron.com/pub/$pkgname/$pkgname-$pkgver.tar.gz"{,.asc})
 validpgpkeys=('BE04995BA8F90ED0C0C176C471112AB16CB33B3A') # Christos Zoulas
-sha256sums=('e9c13967f7dd339a3c241b7710ba093560b9a33013491318e88e6b8b57bae07f'
-            'SKIP'
-            '2ef553d3d4c68fe3e3850bc6151e66ce5714d774536deb9b8401425e73214ea7')
+sha256sums=('593c2ffc2ab349c5aea0f55fedfe4d681737b6b62376a9b3ad1e77b2cc19fa34'
+            'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
@@ -37,15 +36,11 @@ build() {
   # Fix linking libmagic (vfork needs libpthread)
   CFLAGS+=" -pthread"
 
-  # seccomp breaks file -z foo.xz
-  # does a whole pipe-fork-exec dance with /bin/xz, so difficult to fix
-  # this breaks makepkg, specifically on the linux PKGBUILD's patch-*.xz
-
   ./configure \
     --prefix=/usr \
     --datadir=/usr/share/file \
     --enable-fsect-man5 \
-    --disable-libseccomp
+    --enable-libseccomp
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
