[testing] -> [staging] 'syslog-ng-3.25.1-2' move

--- a/syslog-ng/trunk/PKGBUILD
+++ b/syslog-ng/trunk/PKGBUILD
@@ -40,7 +40,7 @@ build() {
     --with-pidfile-dir=/run --enable-spoof-source --enable-ipv6 \
     --disable-systemd --with-systemdsystemunitdir=no \
     --enable-manpages --enable-all-modules --disable-java --disable-java-modules  \
-    --disable-riemann --with-python=3 --with-jsonc=system
+    --disable-riemann --with-python=3 --disable-kafka --with-jsonc=system
   make
 }
 
