--- a/hunspell-en/trunk/PKGBUILD
+++ b/hunspell-en/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=hunspell-en
 pkgname=('hunspell-en_US' 'hunspell-en_AU' 'hunspell-en_CA' 'hunspell-en_GB')
-pkgver=2018.04.16
-pkgrel=6
+pkgver=2019.10.06
+pkgrel=1
 pkgdesc="English hunspell dictionaries"
 arch=(any)
 url="http://wordlist.aspell.net/dicts/"
@@ -14,10 +14,10 @@ source=(http://downloads.sourceforge.net/project/wordlist/speller/$pkgver/hunspe
         http://downloads.sourceforge.net/project/wordlist/speller/$pkgver/hunspell-en_AU-large-$pkgver.zip
         http://downloads.sourceforge.net/project/wordlist/speller/$pkgver/hunspell-en_CA-large-$pkgver.zip
         http://downloads.sourceforge.net/project/wordlist/speller/$pkgver/hunspell-en_GB-large-$pkgver.zip)
-sha1sums=('fd187bef6c15c10712a8aba1bbff563bb3533ceb'
-          'a0edc7fd6aeb1ebd2aca01e06295d7afc4cd681d'
-          'faf7015b8ebebbd4599dda8512013e9f296b9f80'
-          'a5d9771655c1674d6544f96b75cacc64c1397172')
+sha1sums=('270cac9f07e6312266560cb4b63afb03a7d4f291'
+          '364d66a4b0408e59b907ad4f973da67df2c72c49'
+          '5690508ae35ce73ff2be72b2653688998d198c13'
+          '29df2d06526302eeaee972d0a2121e2ac5f49c62')
 
 prepare() {
   sed -i "s:SET UTF8:SET UTF-8:g" *.aff
@@ -33,7 +33,7 @@ package_hunspell-en_US() {
   install -m644 en_US*.dic en_US*.aff $pkgdir/usr/share/hunspell
 
   pushd $pkgdir/usr/share/hunspell/
-    en_US_aliases="en_PH en_US"
+    en_US_aliases="en_US"
     for lang in $en_US_aliases; do
       ln -s en_US-large.aff $lang.aff
       ln -s en_US-large.dic $lang.dic
