[trunk] -> [extra] 'openmp-9.0.1-2' add

--- a/openmp/repos/extra-x86_64/PKGBUILD
+++ b/openmp/repos/extra-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=openmp
 pkgver=9.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="LLVM OpenMP Runtime Library"
 arch=('x86_64')
 url="https://openmp.llvm.org/"
@@ -31,7 +31,8 @@ build() {
 
   cmake .. -G Ninja \
     -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=/usr
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DLIBOMP_INSTALL_ALIASES=OFF
   ninja
 }
 
@@ -40,9 +41,6 @@ package() {
 
   DESTDIR="$pkgdir" ninja install
   install -Dm644 ../LICENSE.txt "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
-
-  # libgomp.so is also provided by gcc-libs; remove it to fix the conflict
-  rm "$pkgdir/usr/lib/libgomp.so"
 
 }
 
