--- a/libqalculate/trunk/PKGBUILD
+++ b/libqalculate/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libqalculate
-pkgver=3.7.0
+pkgver=3.8.0
 pkgrel=1
 pkgdesc="Multi-purpose desktop calculator"
 arch=(x86_64)
 url="https://qalculate.github.io/"
 license=(GPL)
 depends=(libxml2 curl mpfr)
-makedepends=(intltool)
+makedepends=(intltool doxygen)
 optdepends=('gnuplot: for plotting support')
 source=(https://github.com/Qalculate/libqalculate/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('f1a3f2510133ed8d4b278058565d83d65c180025711a4dc7da8e242d8a5f8247')
+sha256sums=('d8fcf445677ced76c13db5bd31af96f069f83041a264ac4df0d065af47b2e1ae')
 
 build() {
   cd $pkgname-$pkgver
