[testing] -> [extra] 'autogen-5.18.14-1' move

--- a/autogen/repos/extra-x86_64/PKGBUILD
+++ b/autogen/repos/extra-x86_64/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Tor Krill
 
 pkgname=autogen
-pkgver=5.18.12
-pkgrel=3
+pkgver=5.18.14
+pkgrel=1
 pkgdesc="A tool designed to simplify the creation and maintenance of programs that contain large amounts of repetitious text"
 arch=('x86_64')
 url="https://www.gnu.org/software/autogen/"
@@ -12,8 +12,13 @@ license=('GPL3')
 depends=('guile2.0' 'libxml2')
 source=(https://ftp.gnu.org/gnu/${pkgname}/rel${pkgver}/${pkgname}-${pkgver}.tar.xz{,.sig})
 validpgpkeys=('44A088E295C3A722C450590EC9EF76DEB74EE762') # Bruce Korb <bkorb@gnu.org>
-sha256sums=('be3ba62e883185b6ee8475edae97d7197d701d6b9ad9c3d2df53697110c1bfd8'
+sha512sums=('dab8c8e00cb97cfaeff5adc0e0c2931ae79044864bdf70f396f865835c660cbc15d1bc4a34a9aae8e093feb1d178fe1fbb96d657c0f1ce64d9f4705a4e585c00'
             'SKIP')
+
+prepare() {
+  cd $pkgname-$pkgver
+  sed -i 's/ -Werror / /' configure
+}
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -24,10 +29,10 @@ build() {
 
 check() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  make check
+  make check -j1
 }
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
-} 
+}
