[testing] -> [core] 'curl-7.69.0-3' move

--- a/curl/repos/core-x86_64/PKGBUILD
+++ b/curl/repos/core-x86_64/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=curl
 pkgver=7.69.0
-pkgrel=1
+pkgrel=3
 pkgdesc="An URL retrieval utility and library"
 arch=('x86_64')
 url="https://curl.haxx.se"
@@ -14,10 +14,21 @@ license=('MIT')
 depends=('ca-certificates' 'krb5' 'libssh2' 'openssl' 'zlib' 'libpsl' 'libnghttp2'
          'libidn2' 'libidn2.so')
 provides=('libcurl.so')
-source=("https://curl.haxx.se/download/$pkgname-$pkgver.tar.gz"{,.asc})
+source=("https://curl.haxx.se/download/$pkgname-$pkgver.tar.gz"{,.asc}
+        0001-Revert-pause-force-drain-the-transfer-on-unpause.patch
+        0001-pause-force-a-connection-re-check-after-unpausing.patch)
 sha512sums=('0ecd9e6e55cb19400fafdcd723c72667903ec760652e60fe0b884a672e1ac5d8667c8837422145a9af995ffe36d31a2685296f272ebddf1f5f1a7b12baf0fbad'
-            'SKIP')
+            'SKIP'
+            '6aaafcb580f88c715a294ea7b53877a405a4f6c4a338d830380a5c97a324268a287c893ee6fd24c3b69dc0566275336ec74c3816f2202e12d39840360d6784f0'
+            'bc384dcfef4f6ca8d52171b97d5979c5b043e70d756836f87449ea0108d9615521408fa71c330c4b627738978eacd24de80a0e93438532a8f48a4d049e83334e')
 validpgpkeys=('27EDEAF22F3ABCEB50DB9A125CC908FDB71E12C2') # Daniel Stenberg
+
+prepare() {
+  cd "$pkgname-$pkgver"
+
+  patch -Np1 <../0001-Revert-pause-force-drain-the-transfer-on-unpause.patch
+  patch -Np1 <../0001-pause-force-a-connection-re-check-after-unpausing.patch
+}
 
 build() {
   cd "$pkgname-$pkgver"
