[testing] -> [core] 'binutils-2.34-2' move

--- a/binutils/repos/core-x86_64/PKGBUILD
+++ b/binutils/repos/core-x86_64/PKGBUILD
@@ -5,14 +5,14 @@
 
 pkgname=binutils
 pkgver=2.34
-pkgrel=1
+pkgrel=2
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64)
 url='https://www.gnu.org/software/binutils/'
 license=(GPL)
 groups=(base-devel)
-depends=(glibc zlib)
-checkdepends=(dejagnu bc)
+depends=(glibc zlib elfutils)
+makedepends=('elfutils')
 conflicts=(binutils-multilib)
 replaces=(binutils-multilib)
 options=(staticlibs !distcc !ccache)
@@ -49,6 +49,7 @@ build() {
     --enable-threads \
     --disable-gdb \
     --disable-werror \
+    --with-debuginfod \
     --with-pic \
     --with-system-zlib
 
